OpenLGTV BCM: support for old BCM35xx NetCast configs in netcast_config_regenerator.sh and rc.netcast
git-svn-id: http://svn.openlgtv.org.ru@644 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -251,6 +251,7 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: support for customised /mnt/user/www/links.html file with NetCast links
     * ADD: some useful device files - input/event devices increased from 5 to 10, pts devices from 5 to 10, /dev/cdrom,dvd,sg..., /dev/uinput, /dev/rfcomm0-49, /dev/vhci
     * ADD: netcast_config_check.sh script to verify which NetCast config versions are used
+    * ADD: support for both old and new NetCast configs and NetCast upgrade/downgrade handling
     * UPDATE: tmux upgraded from 1.4 to 1.5 with use dynamic libncurses library instead of staticly linked code
     * UPDATE: busybox upgraded from 1.18.4(+passwd patch) to 1.19.2(+crond patch) with additional setserial, ubi*, users, groups, whois, pstree, pwdx,.. applets
     * CHANGE: /etc/rc.d/rc.mount rewrite for more flexible partitions handling
@@ -269,6 +270,5 @@ Answer for people asking if they can use it if they have already made modificati
     * REMOVE: tcpdump binary for space reasons
     * REMOVE: top binary - use busybox applet instead
 
-Remaining issues with 0.5.0 developement branch:
-    * no support for very old firmware versions NetCast configuration (for example in Argentina) - still leaving those untouched (issue with all OpenLGTV BCM versions)
+Remaining issues with 0.5.0 development branch:
     * compatibility break with autoupgrade method from older versions - need to install 0.5.0 via telnet/ssh/serial again
