--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -242,7 +242,7 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: libncurses.so.5.7 and recompiled top binary to use the lib
     * ADD: lua, luac, liblua.so.5.1.4
     * ADD: libSDL-1.2.so.0.11.3 with DirectFB access for additional SDL apps that can now use TV screen
-    * ADD: OPENRELEASE 2.1.2-5-g0a346da by rtokarev with possibility to bind scripts/executables actions to remote keys
+    * ADD: OPENRELEASE 2.1.2-7-g5dd1fe0 by rtokarev with possibility to bind scripts/executables actions to remote keys
     * ADD: CGI web page for remote control by mihaifireball under http://ip_of_tv/remote/
     * ADD: possibility to remove all OpenLGTV BCM configs or just NetCast configs for recreating defaults at next boot using WebUI
     * ADD: bootlog is copied at each boot with usb stick/disk plugged in to OpenLGTV_BCM/OpenLGTV_BCM.log file or OpenLGTV_BCM/OpenLGTV_BCM-firstboot.log when it's first boot
