--- a/lgmod_s7/changelog.txt
+++ b/lgmod_s7/changelog.txt
@@ -24,7 +24,7 @@ IMPORTANT: In TV menu "EZ ADJUST"/"Tool Option3" - set "DVR Ready" to "0" (defau
 
 2. Prepare dedicated USB drive:
 	You need one FAT32 partition with min free space ~160 MB.
-	When started for first time, installation script will backup all TV partitions.
+	When started for first time, installation script will backup all 25 TV partitions.
 	Extroot archive have programs which does not fit in TV root partition.
 	You need second partition with min size ~160 MB (EXT2/EXT3 because FAT/NTFS does not support sym.links).
 
@@ -38,8 +38,7 @@ Note: Installation script does NOT write log file! Save the log from serial term
 		sh /mnt/usb1/Drive1/install.sh
 		sh /mnt/usb1/Drive1/install.sh noinfo nobackup install
 	You have to restart TV after install.
-	To copy and verify your backup - use TV remote control and <eject> USB drive.
-		sh /mnt/usb1/Drive1/install.sh noinfo nobackup install
+	To copy and verify your backup - use TV remote control and safely <eject> USB drive.
 
 4. Upgrade LGMOD:
 	Once LGMOD is installed, you can upload files using ftp, scp or webui.
